--- a/Chimera Generator/index.html
+++ b/Chimera Generator/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chimera Labratory</title>
-    <link rel="stylesheet" href="chimeraLab.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <script src="chimeraList.js"></script> 
